--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -8,3 +8,24 @@ body {
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
     background-color: rgba(245, 163, 66, 0.2);
 }
+
+.table-nonfluid {
+    width: auto !important;
+}
+
+.table-nonfluid td:nth-child(1) {
+    font-weight: 700;
+}
+
+.product-img-container {
+    width:100%;
+    height:100%;
+    position:relative;
+}
+
+.product-img-container img {
+    position:absolute;
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
