--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -9,23 +9,21 @@ body {
     background-color: rgba(245, 163, 66, 0.2);
 }
 
-.table-nonfluid {
-    width: auto !important;
-}
-
-.table-nonfluid td:nth-child(1) {
-    font-weight: 700;
-}
-
 .product-img-container {
     width:100%;
     height:100%;
     position:relative;
 }
 
-.product-img-container img {
+.product-img-container img{
     position:absolute;
     width:100%;
     height:100%;
     object-fit:cover;
+}
+
+.table-img {
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
 }
