--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,7 +1,7 @@
 html, body, * {margin:0; padding:0;}
 
 body {
-    font-family: "Fira Mono", "Helvetica Neue";
+    /*font-family: "Fira Mono", "Helvetica Neue";*/
     font-weight: 400;
 }
 
