(front) front of admin is finish

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,7 +1,7 @@
 html, body, * {margin:0; padding:0;}
 
 body {
-    font-family: "Fira Mono", "Helvetica Neue";
+    /*font-family: "Fira Mono", "Helvetica Neue";*/
     font-weight: 400;
 }
 
@@ -26,4 +26,30 @@ body {
     height: 50px;
     width: 50px;
     object-fit: cover;
+}
+
+.background-add-Admin{
+    background-color: rgb(227, 227, 227);
+}
+
+.login-img{
+    height: 100%;
+}
+
+.login-img-div{
+   width: 33%;
+    height: 100%;
+}
+.login-champ{
+    justify-content:space-around;
+    height:100%;
+}
+.login-champ-use{
+    margin-bottom: 30px;
+}
+.login-champ-pwd{
+    margin-top: 30px;
+}
+.bg-light-custome{
+    background-color: rgba(199, 199, 199, 0.19);
 }
